# cli

./: .gitignore  Cargo.toml  README.md  gripmock.md  install.sh  payload_create.json  payload_run.json  preflight-setup.md
.cargo/: config.toml
.github/workflows/: build_seer.yaml  seer-build.yaml  seer-prepare.yaml  seer-publish.yaml  seer-release.yaml  tag_on_version_bump.yaml
install/: Dockerfile.amd64  README.md  install.sh
src/: build.rs  debug_check.rs  install.rs  lib.rs  main.rs  project.rs  temp_file.rs  update.rs
src/run/: artifacts.rs  artifacts_dir.rs  auth.rs  blobs.rs  client.rs  consent.rs  idl.rs  mod.rs  source_paths.rs  upload.rs  utils.rs
