[package]
name = "seer-cli"
version = "0.1.0"
edition = "2021"
authors = ["deithblaidd"]
description = "CLI tool to build Solana native programs with DWARF debug info"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
cargo_metadata = "0.18"
toml_edit = "0.21"
anyhow = "1.0"
defer = "0.2.1"
dirs = "6.0.0"
glob = "0.3.3"
object = "0.37.3"
