[package]
name = "seer-cli"
version = "0.1.0"
edition = "2021"
authors = ["deithblaidd"]
description = "CLI tool to build Solana native programs with DWARF debug info"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
cargo_metadata = "0.18"
toml_edit = "0.21"
anyhow = "1.0"
defer = "0.2.1"
dirs = "6.0.0"
glob = "0.3.3"
object = "0.37.3"
tokio = { version = "1.48.0", features = ["full"] }
base64 = "0.22.1"
solana-sdk = "3.0.0"
bincode = "1"
serde = "1.0.228"
tracing-subscriber ={ version = "0.3.20", features = ["fmt", "env-filter"] }
directories = "6.0.0"
rpassword = "7.4.0"
serde_json = "1.0.145"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
tracing = "0.1.41"
path-clean = "1.0.1"
memmap2 = "0.9.9"
gimli = "0.32.3"
sha2 = "0.10.9"

